# django-crunch

./: .buildinfo  .coveragerc  .gitignore  AUTHORS.rst  README.md  README.rst  api.html  cli.html  cloud.html  compute.html  credits.html  datasets.html  genindex.html  index.html  makemigrations.sh  migrate.sh  mkdocs.sh  objects.inv  paper.md  py-modindex.html  pyproject.toml  pytest.ini  quickstart.html  search.html  searchindex.js  shell.sh  storage.html  tests.py
.doctrees/: api.doctree  cli.doctree  cloud.doctree  compute.doctree  credits.doctree  datasets.doctree  environment.pickle  index.doctree  quickstart.doctree  storage.doctree
.github/workflows/: docs.yml  testing.yml
_sources/: api.rst.txt  cli.rst.txt  compute.rst.txt  index.rst.txt
coverage/: d_03eca0014e69336b___init___py.html  d_03eca0014e69336b_admin_py.html  d_03eca0014e69336b_apps_py.html  d_03eca0014e69336b_enums_py.html  d_03eca0014e69336b_mapping_py.html  d_03eca0014e69336b_models_py.html  d_03eca0014e69336b_serializers_py.html  d_03eca0014e69336b_storages_py.html  d_03eca0014e69336b_tokens_py.html  d_03eca0014e69336b_urls_py.html  d_03eca0014e69336b_views_py.html  d_4861d7838f8f71db___init___py.html  d_4861d7838f8f71db_crunch_py.html  d_61b7329d4fe04ac2___init___py.html  d_667fd052a0a9b83a___init___py.html  d_7eed465439dd4a74_0001_initial_py.html  d_7eed465439dd4a74_0002_auto_20220320_0535_py.html  d_7eed465439dd4a74_0003_booleanattribute_py.html  d_7eed465439dd4a74_0004_dateattribute_py.html  d_7eed465439dd4a74_0005_alter_item_slug_py.html  d_7eed465439dd4a74_0006_filesizeattribute_py.html  d_7eed465439dd4a74_0007_dataset_base_file_path_py.html  d_7eed465439dd4a74_0008_auto_20220811_1223_py.html  d_7eed465439dd4a74_0009_auto_20220811_0231_py.html  d_7eed465439dd4a74_0010_auto_20220908_0001_py.html  d_7eed465439dd4a74_0011_dataset_locked_py.html  d_7eed465439dd4a74___init___py.html  d_e6a3666fea1b7d7c___init___py.html  d_e6a3666fea1b7d7c_manage_py.html  d_e6a3666fea1b7d7c_settings_py.html  d_e6a3666fea1b7d7c_urls_py.html  d_e6a3666fea1b7d7c_wsgi_py.html  d_f64f918808c2a1ac___init___py.html  d_f64f918808c2a1ac_connections_py.html  d_f64f918808c2a1ac_diagnostics_py.html  d_f64f918808c2a1ac_enums_py.html  d_f64f918808c2a1ac_main_py.html  d_f64f918808c2a1ac_run_py.html  d_f64f918808c2a1ac_utils_py.html  index.html  (+1 more)
crunch/: __init__.py
crunch/agent/: main.py
crunch/cli/: connections.py  diagnostics.py  main.py  process.py
crunch/client/: connections.py  enums.py  main.py  run.py  utils.py
crunch/django/: models.py
crunch/django/app/: admin.py  apps.py  enums.py  mapping.py  models.py  serializers.py  storage.py  storages.py  urls.py  views.py
crunch/django/proj/: .gitignore  manage.py  settings.py  urls.py  wsgi.py
crunch/django/proj/settings/: base.py  local.py
crunch/management/commands/: dataset-files.py
crunch/migrations/: 0001_initial.py  0002_auto_20220210_0503.py  0002_auto_20220320_0535.py  0003_auto_20220210_0639.py  0003_booleanattribute.py  0004_alter_attribute_dataset.py  0004_dateattribute.py  0005_alter_item_slug.py  0005_project_snakefile.py  0006_auto_20220211_0036.py  0006_filesizeattribute.py  0007_auto_20220211_0126.py  0007_dataset_base_file_path.py  0008_auto_20220211_0322.py  0008_auto_20220811_1223.py  0009_auto_20220214_0646.py  0009_auto_20220811_0231.py  0010_auto_20220214_0652.py  0010_auto_20220908_0001.py  0011_auto_20220214_0654.py  0011_dataset_locked.py  0012_auto_20220215_0115.py  0013_auto_20220307_2330.py  0014_auto_20220308_0019.py
crunch/templates/: base.html
crunch/templates/crunch/: dataset_detail.html  dataset_list.html  item_detail.html  item_map.html  project_detail.html  project_list.html
crunch/templatetags/: crunch.py
docs/: api.rst  cli.rst  cloud.rst  conf.py  datasets.rst  index.rst  storage.rst
tests/: test_api.py  test_client_connections.py  test_client_main.py  test_client_run.py  test_client_utils.py  test_diagnostics.py  test_enums.py  test_mapping.py  test_models.py  test_storages.py  test_views.py
tests/test-data/: dummy-workflow  dummy-workflow-fail  settings.json  settings.toml
tests/test-data/dummy-files/: dummy-file1.txt  dummy-file2.txt
tests/test-data/dummy-files2/: dummy-file3.txt
