[tool.poetry]
name = "django-crunch"
version = "0.1.0"
description = "A data processing orcestration tool."
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "crunch" },
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
django-cms = "^3.9.0"
typer = {extras = ["all"], version = "^0.4.0"}
djangorestframework = "^3.13.1"
rich = "^11.1.0"
django-extensions = "^3.1.5"
django-polymorphic = ">=2,<3.1"
requests = "^2.27.1"
snakemake = "^6.15.5"
djangocms-admin-style = "^2.0.2"
djangocms-attributes-field = "^2.0.0"
djangocms-file = "^3.0.0"
djangocms-googlemap = "^2.0.0"
djangocms-link = "^3.0.0"
djangocms-picture = "^3.0.0"
djangocms-snippet = "^3.0.0"
djangocms-style = "^3.0.0"
djangocms-text-ckeditor = "^4.0.0"
djangocms-video = "^3.0.0"
djangocms-bootstrap4 = "^2.0.0"
djangocms-page-meta = "^1.0.1"
django-next-prev = "^1.1.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipykernel = "^6.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
crunch = "crunch.cli.main:app"
crunchsite = "crunch.django.proj.manage:main"
