[tool.poetry]
name = "django-crunch"
version = "0.1.12"
description = "A data processing orcestration tool."
authors = ["Robert Turnbull, Mar Quiroga and Simon Mutch <robert.turnbull@unimelb.edu.au>"]
license = "Apache-2.0"
readme = "README.rst"
packages = [
    { include = "crunch" },
]
homepage = "https://github.com/rbturnbull/django-crunch"
repository = "https://github.com/rbturnbull/django-crunch"
documentation = "https://rbturnbull.github.io/django-crunch/"
keywords = ["django", "data processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Django",
]

[tool.poetry.dependencies]
python = ">=3.8,<=3.11"
Django = "^3.2"
django-cms = "^3.9.0"
typer = {extras = ["all"], version = "^0.4.0"}
djangorestframework = "^3.13.1"
rich = "^11.1.0"
django-extensions = "^3.1.5"
django-polymorphic = ">=2,<3.1"
requests = "^2.27.1"
snakemake = "^6.15.5"
djangocms-admin-style = "^2.0.2"
djangocms-attributes-field = "^2.0.0"
djangocms-file = "^3.0.0"
djangocms-googlemap = "^2.0.0"
djangocms-link = "^3.0.0"
djangocms-picture = "^3.0.0"
djangocms-snippet = "^3.0.0"
djangocms-style = "^3.0.0"
djangocms-text-ckeditor = "^4.0.0"
djangocms-video = "^3.0.0"
djangocms-bootstrap4 = "^2.0.0"
djangocms-page-meta = "^1.0.1"
django-next-prev = "^1.1.0"
python-dateutil = "^2.8.2"
django-storages = {extras = ["boto3"], version = "^1.12.2"}
ipykernel = "^6.9.1"
django-mptt = "^0.13.4"
django-polymorphic-tree = "^2.1"
humanize = "^4.0.0"
pydeck = "^0.7.1"
toml = "^0.10.2"
setuptools = "^65.3.0"
djangocms-bootstrap = "^1.1.2"
djangocms-themata = "^0.1.0"
pandas = "^1.4.4"
anytree = "^2.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-django = "^4.5.2"
ipykernel = "^6.6.1"
Sphinx = "^4.4.0"
nbsphinx = "^0.8.7"
sphinx-rtd-theme = "^1.0.0"
sphinx-autobuild = "^2021.3.14"
sphinx-copybutton = "^0.4.0"
sphinxcontrib-mermaid = "^0.7.1"
myst-parser = "^0.17.0"
sphinx-click = {git = "https://github.com/rbturnbull/sphinx-click.git"}
coverage = "^6.4.4"
pre-commit = "^2.20.0"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
crunch = "crunch.client.main:app"
crunchsite = "crunch.django.proj.manage:main"
